# arm-without-magic

./: .gitignore  CMakeLists.txt  _gdbinit  readme.md  stm32.cmake
ld-scripts/: stm32f103c8.ld
src/: main.c  startup.c  startup.h
